<package format="2">
  <name>realm_ros</name>
  <version>1.0.0</version>
  <description>The realm_ros package</description>

  <author>Alexander Kern</author>
  <maintainer email="al.kern@tu-bs.de">laxn_pander</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>realm_msgs</build_depend>
  <build_depend>realm_core</build_depend>
  <build_depend>realm_io</build_depend>
  <build_depend>realm_stages</build_depend>
  <build_depend>cmake_modules</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geodesy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>realm_msgs</exec_depend>
  <exec_depend>realm_core</exec_depend>
  <exec_depend>realm_io</exec_depend>
  <exec_depend>realm_stages</exec_depend>
  <exec_depend>cmake_modules</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
 <export>
   <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lrealm_ros"/>
 </export>

</package>
