<package>
  <name>realm_rviz_plugin</name>
  <version>1.0.0</version>
  <description>
     A plugin for rviz to render 2D geo tagged images in the rviz 3D area 
  </description>
  <maintainer email="hanes.harms@tu-bs.de">Hannes Harms</maintainer>
  <license>BSD</license>

  <author>Hannes Harms</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rviz</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>realm_msgs</build_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
