<package format="2">
  <name>realm_stages</name>
  <version>1.0.0</version>
  <description>The realm_stages package</description>

  <author>Alexander Kern</author>
  <maintainer email="al.kern@tu-bs.de">laxn_pander</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

    <build_depend>realm_core</build_depend>
    <build_depend>realm_io</build_depend>
    <build_depend>realm_vslam_base</build_depend>
    <build_depend>realm_densifier_base</build_depend>
    <build_depend>realm_ortho</build_depend>
    <build_depend>cmake_modules</build_depend>

    <exec_depend>realm_core</exec_depend>
    <exec_depend>realm_io</exec_depend>
    <exec_depend>realm_vslam_base</exec_depend>
    <exec_depend>realm_densifier_base</exec_depend>
    <exec_depend>realm_ortho</exec_depend>
    <exec_depend>cmake_modules</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
 <export>
   <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lrealm_stages"/>
 </export>

</package>
